holiday permit authorization added